--- a/src/App.css
+++ b/src/App.css
@@ -34,152 +34,213 @@ html {
 
 body {
   background: var(--mainBG);
+  overflow-x: hidden;
 }
 
-nav {
-  box-sizing: border-box;
-  width: 100%;
-  padding: 20px 50px;
-  position: fixed;
-  background: rgba(20, 20, 26, 0.534);
-  backdrop-filter: blur(12px);
-  border-bottom: 1px rgba(255, 255, 255, 0.14) solid;
-  display: flex;
-  justify-content: space-between;
-}
+@media (min-width: 1000px) {
 
-nav .nav-side a {
-  color: rgba(255, 255, 255, 0.675);
-  text-decoration: none;
-  transition: .3s;
-  margin-inline: 16px;
-}
+  nav {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 20px 50px;
+    position: fixed;
+    background: rgba(20, 20, 26, 0.534);
+    backdrop-filter: blur(12px);
+    border-bottom: 1px rgba(255, 255, 255, 0.14) solid;
+    display: flex;
+    justify-content: space-between;
+  }
 
-nav .nav-side a:hover {
-  color: white;
-}
+  nav .nav-side a {
+    color: rgba(255, 255, 255, 0.675);
+    text-decoration: none;
+    transition: .3s;
+    margin-inline: 16px;
+  }
 
-.nav-side:nth-child(2) {
-  display: flex;
-  align-items: center;
-}
+  nav .nav-side a:hover {
+    color: white;
+  }
 
-.logo-text {
-  letter-spacing: -1px;
-  user-select: none;
-  cursor: pointer;
-  font-size: 17pt;
-  background-clip: text;
-  text-decoration: none;
-  transition: .3s;
+  .nav-side:nth-child(2) {
+    display: flex;
+    align-items: center;
+  }
 
-  background: -webkit-linear-gradient(40deg, var(--accent), var(--accent2));
-  -webkit-background-clip: text;
-  max-width: fit-content;
-  -webkit-text-fill-color: transparent;
-  font-weight: 900;
-}
+  .logo-text {
+    letter-spacing: -1px;
+    user-select: none;
+    cursor: pointer;
+    font-size: 17pt;
+    background-clip: text;
+    text-decoration: none;
+    transition: .3s;
+    background: -webkit-linear-gradient(40deg, var(--accent), var(--accent2));
+    -webkit-background-clip: text;
+    max-width: fit-content;
+    -webkit-text-fill-color: transparent;
+    font-weight: 900;
+  }
 
-.logo-text:hover {
-  background-position-x: 156px;
-  filter: contrast(10);
-}
+  .logo-text:hover {
+    background-position-x: 156px;
+    filter: contrast(10);
+  }
 
-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  gap: 16%;
-}
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+    padding-inline: 180px;
+    min-height: 100vh;
+  }
 
-header h1 {
-  margin-left: -10px;
-  font-size: 39pt;
-  margin-bottom: 30px;
-}
+  header h1 {
+    margin-left: -10px;
+    font-size: 39pt;
+    margin-bottom: 30px;
+  }
 
-header .header-about {
-  font-size: 13pt;
-  letter-spacing: 2px;
-}
+  header .header-about {
+    font-size: 13pt;
+    letter-spacing: 2px;
+  }
 
-.header-side {
-  max-width: 30%;
-}
+  .header-side {
+    max-width: 370px;
+  }
 
-.header-side>* {
-  margin-inline: auto;
-}
+  .header-side>* {
+    margin-inline: auto;
+  }
 
-.header-side .langs-tech-above {
-  font-size: 12pt;
-  color: grey;
-  text-align: right;
-  width: calc(100% - 10px);
-  font-weight: 700;
-}
+  .header-side .langs-tech-above {
+    font-size: 12pt;
+    color: grey;
+    text-align: right;
+    width: calc(100% - 10px);
+    font-weight: 700;
+    margin-bottom: -100%;
+  }
 
-.langs-tech {
-  max-width: 204px;
-  display: flex;
-  flex-wrap: wrap;
-}
+  .langs-tech {
+    max-width: 204px;
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-.langs-tech a {
-  display: grid;
-  margin: 10px;
-  transition: .3s;
-  border-radius: 12px;
-}
+  .langs-tech a {
+    display: grid;
+    margin: 10px;
+    transition: .3s;
+    border-radius: 12px;
+  }
 
-.langs-tech a:hover {
-  transform: translateY(-6px) scale(1.05);
-}
+  .langs-tech a:hover {
+    transform: translateY(-6px) scale(1.05);
+  }
 
-.langs-tech a[href="#html"]:hover {
-  box-shadow: 0 6px 6px #E14E1D;
-}
+  .langs-tech a[href="#html"]:hover {
+    box-shadow: 0 6px 6px #E14E1D;
+    background: #E14E1D;
+  }
 
-.langs-tech a[href="#css"]:hover {
-  box-shadow: 0 6px 6px #0277BD;
-}
+  .langs-tech a[href="#css"]:hover {
+    box-shadow: 0 6px 6px #0277BD;
+    background: #0277BD;
+  }
 
-.langs-tech a[href="#js"]:hover {
-  box-shadow: 0 6px 6px #F0DB4F;
-}
+  .langs-tech a[href="#js"]:hover {
+    box-shadow: 0 6px 6px #F0DB4F;
+    background: #F0DB4F;
+  }
 
-.langs-tech a[href="#ts"]:hover {
-  box-shadow: 0 6px 6px #007ACC;
-}
+  .langs-tech a[href="#ts"]:hover {
+    box-shadow: 0 6px 6px #007ACC;
+    background: #007ACC;
+  }
 
-.langs-tech a[href="#react"]:hover {
-  box-shadow: 0 6px 6px #00D8FF;
-}
+  .langs-tech a[href="#react"]:hover {
+    box-shadow: 0 6px 6px #00D8FF;
+    background: #00D8FF;
+  }
 
-.langs-tech a[href="#svelte"]:hover {
-  box-shadow: 0 6px 6px #FF3E00;
-}
+  .langs-tech a[href="#svelte"]:hover {
+    box-shadow: 0 6px 6px #FF3E00;
+    background: #FF3E00;
+  }
 
-.langs-tech a[href="#git"]:hover {
-  box-shadow: 0 6px 6px #F03C2E;
-}
+  .langs-tech a[href="#git"]:hover {
+    box-shadow: 0 6px 6px #F03C2E;
+    background: #F03C2E;
+  }
 
-.langs-tech a[href="#py"]:hover {
-  box-shadow: 0 3px 3px #346E9E, 0 6px 6px #FFD242;
-}
+  .langs-tech a[href="#py"]:hover {
+    box-shadow: 0 3px 3px #346E9E, 0 6px 6px #FFD242;
+    background: #346E9E;
+  }
 
-.langs-tech a[href="#firebase"]:hover {
-  box-shadow: 0 2px 2px #FFA513, 0 4px 4px #F4830F, 0 6px 6px #FFCB2E;
-}
+  .langs-tech a[href="#firebase"]:hover {
+    box-shadow: 0 2px 2px #FFA513, 0 4px 4px #F4830F, 0 6px 6px #FFCB2E;
+    background: #FFA513;
+  }
 
-p a {
-  text-decoration: none;
-  color: var(--accent2);
-  font-weight: 600;
-  transition: .3s;
-}
+  p a {
+    text-decoration: none;
+    color: var(--accent2);
+    font-weight: 600;
+    transition: .3s;
+  }
 
-p a:hover {
-  color: var(--accent2_hover);
+  p a:hover {
+    color: var(--accent2_hover);
+  }
+
+  section {
+    box-sizing: border-box;
+    padding: 50px 20%;
+    width: 100%;
+  }
+
+  section h2 {
+    margin-bottom: 15px;
+  }
+
+  section .about-text {
+    margin-left: 15px;
+    font-size: 13pt;
+    letter-spacing: 1px;
+  }
+
+  .colored-text {
+    background-clip: text;
+    background: -webkit-linear-gradient(40deg, var(--accent), var(--accent2));
+    -webkit-background-clip: text;
+    max-width: fit-content;
+    -webkit-text-fill-color: transparent;
+    font-weight: 700;
+  }
+
+  .contact-socials-wrp {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 30px;
+  }
+
+  .socials-element {
+    width: 36%;
+  }
+
+  .socials-element a {
+    color: rgba(255, 255, 255, 0.836);
+    transition: .3s;
+    font-size: 13pt;
+    text-decoration: none;
+    margin-inline: 7px;
+  }
+
+  .socials-element a:hover {
+    color: white;
+  }
 }
