--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   scroll-behavior: smooth;
   color: white;
+  scroll-padding-top: 115px;
 }
 
 body {
@@ -49,6 +50,7 @@ body {
     border-bottom: 1px rgba(255, 255, 255, 0.14) solid;
     display: flex;
     justify-content: space-between;
+    z-index: 999;
   }
 
   nav .nav-side a {
@@ -107,6 +109,10 @@ body {
     letter-spacing: 2px;
   }
 
+  main {
+    margin-bottom: 120px;
+  }
+
   .header-side {
     max-width: 370px;
   }
@@ -141,12 +147,12 @@ body {
     transform: translateY(-6px) scale(1.05);
   }
 
-  .langs-tech a[href="#html"]:hover {
+  .langs-tech a[href="#html-css"]:hover {
     box-shadow: 0 6px 6px #E14E1D;
     background: #E14E1D;
   }
 
-  .langs-tech a[href="#css"]:hover {
+  .langs-tech a[href="#html-css"]:nth-child(2):hover {
     box-shadow: 0 6px 6px #0277BD;
     background: #0277BD;
   }
@@ -197,7 +203,7 @@ body {
     color: var(--accent2_hover);
   }
 
-  section {
+  section:not(.langs-section) {
     box-sizing: border-box;
     padding: 50px 20%;
     width: 100%;
@@ -258,5 +264,53 @@ body {
   a.colored-text:hover {
     background-position-x: 124px;
     filter: contrast(10);
+  }
+
+  .langs-section {
+    margin-left: 30px;
+    padding-block: 30px;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    border-bottom: 1px rgba(255, 255, 255, 0.154) solid;
+  }
+
+  .langs-section:last-child {
+    border-bottom: none;
+  }
+
+  .langs-section img {
+    max-height: 30px;
+    width: auto;
+  }
+
+  .langs-section h3 {
+    display: grid;
+    min-width: 58px;
+    max-width: 58px;
+    word-wrap: break-word;
+  }
+
+  .sarcasm {
+    text-decoration: line-through;
+    color: rgb(255, 0, 0);
+  }
+
+  .langs-icons {
+    display: flex;
+    gap: 10px;
+    min-width: 70px;
+    justify-content: center;
+    max-width: 70px;
+  }
+
+  footer {
+    box-sizing: border-box;
+    padding: 60px 80px;
+    background: rgb(20, 20, 20);
+    border-top: 1px rgba(255, 255, 255, 0.154) solid;
+    display: flex;
+    justify-content: space-between;
+    font-size: 14pt;
   }
 }
