--- a/src/App.css
+++ b/src/App.css
@@ -53,11 +53,19 @@ body {
     z-index: 999;
   }
 
-  nav .nav-side a {
+  .nav-side a {
     color: rgba(255, 255, 255, 0.675);
     text-decoration: none;
     transition: .3s;
     margin-inline: 16px;
+  }
+
+  .nav-side a:has(img) {
+    display: grid;
+  }
+
+  .nav-side a:has(img):hover img {
+    filter: invert(0%);
   }
 
   nav .nav-side a:hover {
@@ -67,6 +75,13 @@ body {
   .nav-side:nth-child(2) {
     display: flex;
     align-items: center;
+  }
+
+  .nav-side img {
+    max-height: 34px;
+    width: auto;
+    transition: .3s;
+    filter: invert(30%);
   }
 
   .logo-text {
@@ -141,6 +156,15 @@ body {
     margin: 10px;
     transition: .3s;
     border-radius: 12px;
+  }
+
+  .langs-tech img {
+    user-select: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
   }
 
   .langs-tech a:hover {
@@ -259,6 +283,11 @@ body {
     max-height: 50px;
     width: auto;
     user-select: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
   }
 
   a.colored-text:hover {
@@ -282,6 +311,13 @@ body {
   .langs-section img {
     max-height: 30px;
     width: auto;
+    user-select: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+
   }
 
   .langs-section h3 {
