--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   scroll-behavior: smooth;
   color: white;
-  scroll-padding-top: 115px;
+  scroll-padding-top: 75px;
 }
 
 body {
@@ -39,7 +39,6 @@ body {
 }
 
 @media (min-width: 1000px) {
-
   nav {
     box-sizing: border-box;
     width: 100%;
@@ -126,6 +125,7 @@ body {
 
   main {
     margin-bottom: 120px;
+    min-height: 100vh;
   }
 
   .header-side {
@@ -348,5 +348,164 @@ body {
     display: flex;
     justify-content: space-between;
     font-size: 14pt;
+  }
+
+  .no-projects-wrp {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .no-projects {
+    text-align: center;
+  }
+
+  .no-projects * {
+    letter-spacing: 1px;
+  }
+
+  .no-projects h1 {
+    color: rgba(255, 126, 126, 0.634);
+    margin-bottom: 30px;
+    font-size: 26pt;
+  }
+
+  .no-projects p {
+    color: grey;
+    font-size: 14pt;
+  }
+
+  main.projects {
+    padding-top: 120px;
+    min-height: calc(100vh - 145px);
+  }
+
+  main.projects>h1 {
+    text-align: center;
+    margin-bottom: 15px;
+  }
+
+  .projects-wrp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project-side img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 18px;
+  }
+
+  .project-side {
+    width: 47%;
+  }
+
+  .project-side:has(h3) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 20px;
+  }
+
+  .project:nth-child(even) {
+    flex-direction: row-reverse;
+  }
+
+  .project-side:has(img) {
+    display: grid;
+    align-items: center;
+  }
+
+  .project-side .tags {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .project-side a {
+    display: grid;
+    place-items: center;
+  }
+
+  .tag {
+    padding: 4px 12px;
+    margin: 6px;
+    border-radius: 4px;
+    font-size: 10pt;
+    font-style: italic;
+    background: #242938;
+    font-weight: 600;
+  }
+
+  .js-tag {
+    color: #F0DB4F;
+  }
+
+  .svelte-tag {
+    color: #FF3E00;
+  }
+
+  .firebase-tag {
+    color: #FFA513;
+  }
+
+  .html-tag {
+    color: #E14E1D;
+  }
+
+  .ts-tag {
+    color: #007ACC;
+  }
+
+  .py-tag {
+    color: #FFD242;
+  }
+
+  .react-tag {
+    color: #00D8FF;
+  }
+
+  .project {
+    width: 900px;
+    box-sizing: border-box;
+    padding: 30px;
+    border: 1px rgba(255, 255, 255, 0.14) solid;
+    border-radius: 18px;
+    display: flex;
+    justify-content: space-between;
+    margin-block: 30px;
+  }
+
+  .tags-wrp>p {
+    font-size: 11pt;
+    color: rgba(255, 255, 255, 0.671);
+    margin-bottom: 2px;
+  }
+
+  .no-demo {
+    color: rgba(255, 105, 105, 0.856);
+    display: grid;
+    align-items: center;
+  }
+
+  .project-links {
+    display: flex;
+    gap: 20px;
+  }
+
+  .project-links a {
+    transition: .3s;
+    display: grid;
+  }
+
+  .project-links a:hover img {
+    filter: invert(0%);
+  }
+
+  .project-links a img {
+    max-height: 30px;
+    width: auto;
+    filter: invert(10%);
   }
 }
