--- a/src/App.css
+++ b/src/App.css
@@ -98,11 +98,6 @@ body {
     font-weight: 900;
   }
 
-  .logo-text:hover {
-    background-position-x: 156px;
-    filter: contrast(10);
-  }
-
   header {
     display: flex;
     justify-content: space-between;
@@ -151,82 +146,6 @@ body {
     flex-wrap: wrap;
   }
 
-  .langs-tech a {
-    display: grid;
-    margin: 10px;
-    transition: .3s;
-    border-radius: 12px;
-  }
-
-  .langs-tech img {
-    user-select: none;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-  }
-
-  .langs-tech a:hover {
-    transform: translateY(-6px) scale(1.05);
-  }
-
-  .langs-tech a[href="#html-css"]:hover {
-    box-shadow: 0 6px 6px #E14E1D;
-    background: #E14E1D;
-  }
-
-  .langs-tech a[href="#html-css"]:nth-child(2):hover {
-    box-shadow: 0 6px 6px #0277BD;
-    background: #0277BD;
-  }
-
-  .langs-tech a[href="#js"]:hover {
-    box-shadow: 0 6px 6px #F0DB4F;
-    background: #F0DB4F;
-  }
-
-  .langs-tech a[href="#ts"]:hover {
-    box-shadow: 0 6px 6px #007ACC;
-    background: #007ACC;
-  }
-
-  .langs-tech a[href="#react"]:hover {
-    box-shadow: 0 6px 6px #00D8FF;
-    background: #00D8FF;
-  }
-
-  .langs-tech a[href="#svelte"]:hover {
-    box-shadow: 0 6px 6px #FF3E00;
-    background: #FF3E00;
-  }
-
-  .langs-tech a[href="#git"]:hover {
-    box-shadow: 0 6px 6px #F03C2E;
-    background: #F03C2E;
-  }
-
-  .langs-tech a[href="#py"]:hover {
-    box-shadow: 0 3px 3px #346E9E, 0 6px 6px #FFD242;
-    background: #346E9E;
-  }
-
-  .langs-tech a[href="#firebase"]:hover {
-    box-shadow: 0 2px 2px #FFA513, 0 4px 4px #F4830F, 0 6px 6px #FFCB2E;
-    background: #FFA513;
-  }
-
-  p a {
-    text-decoration: none;
-    color: var(--accent2);
-    font-weight: 600;
-    transition: .3s;
-  }
-
-  p a:hover {
-    color: var(--accent2_hover);
-  }
-
   section:not(.langs-section) {
     box-sizing: border-box;
     padding: 50px 20%;
@@ -243,15 +162,6 @@ body {
     letter-spacing: 1px;
   }
 
-  .colored-text {
-    background-clip: text;
-    background: -webkit-linear-gradient(40deg, var(--accent), var(--accent2));
-    -webkit-background-clip: text;
-    max-width: fit-content;
-    -webkit-text-fill-color: transparent;
-    font-weight: 700;
-  }
-
   .contact-socials-wrp {
     display: flex;
     justify-content: space-between;
@@ -261,17 +171,6 @@ body {
 
   .socials-element {
     width: 36%;
-  }
-
-  .socials-element a {
-    color: rgba(255, 255, 255, 0.836);
-    transition: .3s;
-    font-size: 13pt;
-    text-decoration: none;
-  }
-
-  .socials-element a:hover {
-    color: white;
   }
 
   .socel-wrp {
@@ -290,11 +189,6 @@ body {
     -ms-user-select: none;
   }
 
-  a.colored-text:hover {
-    background-position-x: 124px;
-    filter: contrast(10);
-  }
-
   .langs-section {
     margin-left: 30px;
     padding-block: 30px;
@@ -304,39 +198,10 @@ body {
     border-bottom: 1px rgba(255, 255, 255, 0.154) solid;
   }
 
-  .langs-section:last-child {
-    border-bottom: none;
-  }
-
-  .langs-section img {
-    max-height: 30px;
-    width: auto;
-    user-select: none;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-
-  }
-
   .langs-section h3 {
     display: grid;
     max-width: 58px;
     word-wrap: break-word;
-  }
-
-  .sarcasm {
-    text-decoration: line-through;
-    color: rgb(255, 0, 0);
-  }
-
-  .langs-icons {
-    display: flex;
-    gap: 10px;
-    min-width: 70px;
-    justify-content: center;
-    max-width: 70px;
   }
 
   footer {
@@ -349,120 +214,8 @@ body {
     font-size: 14pt;
   }
 
-  .no-projects-wrp {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .no-projects {
-    text-align: center;
-  }
-
-  .no-projects * {
-    letter-spacing: 1px;
-  }
-
-  .no-projects h1 {
-    color: rgba(255, 126, 126, 0.634);
-    margin-bottom: 30px;
-    font-size: 26pt;
-  }
-
-  .no-projects p {
-    color: grey;
-    font-size: 14pt;
-  }
-
-  main.projects {
-    padding-top: 120px;
-    min-height: calc(100vh - 145px);
-  }
-
-  main.projects>h1 {
-    text-align: center;
-    margin-bottom: 15px;
-  }
-
-  .projects-wrp {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .project-side img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 18px;
-  }
-
   .project-side {
     width: 47%;
-  }
-
-  .project-side:has(h3) {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    gap: 20px;
-  }
-
-  .project:nth-child(even) {
-    flex-direction: row-reverse;
-  }
-
-  .project-side:has(img) {
-    display: grid;
-    align-items: center;
-  }
-
-  .project-side .tags {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .project-side a {
-    display: grid;
-    place-items: center;
-  }
-
-  .tag {
-    padding: 4px 12px;
-    margin: 6px;
-    border-radius: 4px;
-    font-size: 10pt;
-    font-style: italic;
-    background: #242938;
-    font-weight: 600;
-  }
-
-  .js-tag {
-    color: #F0DB4F;
-  }
-
-  .svelte-tag {
-    color: #FF3E00;
-  }
-
-  .firebase-tag {
-    color: #FFA513;
-  }
-
-  .html-tag {
-    color: #E14E1D;
-  }
-
-  .ts-tag {
-    color: #007ACC;
-  }
-
-  .py-tag {
-    color: #FFD242;
-  }
-
-  .react-tag {
-    color: #00D8FF;
   }
 
   .project {
@@ -474,38 +227,6 @@ body {
     display: flex;
     justify-content: space-between;
     margin-block: 30px;
-  }
-
-  .tags-wrp>p {
-    font-size: 11pt;
-    color: rgba(255, 255, 255, 0.671);
-    margin-bottom: 2px;
-  }
-
-  .no-demo {
-    color: rgba(255, 105, 105, 0.856);
-    display: grid;
-    align-items: center;
-  }
-
-  .project-links {
-    display: flex;
-    gap: 20px;
-  }
-
-  .project-links a {
-    transition: .3s;
-    display: grid;
-  }
-
-  .project-links a:hover img {
-    filter: invert(0%);
-  }
-
-  .project-links a img {
-    max-height: 30px;
-    width: auto;
-    filter: invert(10%);
   }
 
   .menu-line {
@@ -528,19 +249,9 @@ body {
     max-width: 100%;
   }
 
-  .expanded {
-    height: 100vh;
-    width: 100%;
-    background: rgba(20, 20, 26, 0.534);
-    backdrop-filter: blur(12px);
-    transition: .4s;
-    z-index: 1000;
-    position: fixed;
-  }
-
   .menu-line {
     height: 5px;
-    width: 34px;
+    width: 40px;
     background: white;
     border-radius: 4px;
   }
@@ -549,11 +260,65 @@ body {
     margin-block: 5px;
   }
 
+  .expanded {
+    height: 100vh;
+    width: 100%;
+    background: rgba(20, 20, 26, 0.534);
+    backdrop-filter: blur(12px);
+    transition: .4s cubic-bezier(0, 0, 0, 0.76);
+    z-index: 1000;
+    position: fixed;
+    display: flex;
+  }
+
+  .expanded-top {
+    width: 100%;
+    display: flex;
+    justify-content: right;
+    position: absolute;
+    top: 0;
+  }
+
+  .expanded-top button {
+    margin-right: 30px;
+    margin-top: 30px;
+    transition: .3s;
+  }
+
+  nav button:hover,
+  .expanded-top button:hover {
+    transform: scale(1.1);
+  }
+
+  .cross-line:nth-child(1) {
+    transform: rotate(45deg) translateX(8px);
+  }
+
+  .cross-line:nth-child(2) {
+    transform: rotate(-45deg) translateX(7px);
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
   .expanded a {
     color: rgba(255, 255, 255, 0.675);
     text-decoration: none;
     transition: .3s;
     margin-inline: auto;
+    padding-block: 12px;
+    font-weight: 700;
+    font-size: 14pt;
+    border-bottom: 1px rgba(255, 255, 255, 0.14) solid;
+  }
+
+  .expanded a:last-child {
+    border: none;
   }
 
   .expanded a:has(img),
@@ -573,6 +338,7 @@ body {
 
   nav button {
     background: transparent;
+    transition: .3s;
     border: none;
   }
 
@@ -591,11 +357,6 @@ body {
     font-weight: 900;
     display: grid;
     align-items: center;
-  }
-
-  .logo-text:hover {
-    background-position-x: 156px;
-    filter: contrast(10);
   }
 
   header {
@@ -624,7 +385,7 @@ body {
   }
 
   .header-side {
-    max-width: 370px;
+    max-width: 100%;
   }
 
   .header-side>* {
@@ -645,82 +406,6 @@ body {
     max-width: 204px;
     display: flex;
     flex-wrap: wrap;
-  }
-
-  .langs-tech a {
-    display: grid;
-    margin: 10px;
-    transition: .3s;
-    border-radius: 12px;
-  }
-
-  .langs-tech img {
-    user-select: none;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-  }
-
-  .langs-tech a:hover {
-    transform: translateY(-6px) scale(1.05);
-  }
-
-  .langs-tech a[href="#html-css"]:hover {
-    box-shadow: 0 6px 6px #E14E1D;
-    background: #E14E1D;
-  }
-
-  .langs-tech a[href="#html-css"]:nth-child(2):hover {
-    box-shadow: 0 6px 6px #0277BD;
-    background: #0277BD;
-  }
-
-  .langs-tech a[href="#js"]:hover {
-    box-shadow: 0 6px 6px #F0DB4F;
-    background: #F0DB4F;
-  }
-
-  .langs-tech a[href="#ts"]:hover {
-    box-shadow: 0 6px 6px #007ACC;
-    background: #007ACC;
-  }
-
-  .langs-tech a[href="#react"]:hover {
-    box-shadow: 0 6px 6px #00D8FF;
-    background: #00D8FF;
-  }
-
-  .langs-tech a[href="#svelte"]:hover {
-    box-shadow: 0 6px 6px #FF3E00;
-    background: #FF3E00;
-  }
-
-  .langs-tech a[href="#git"]:hover {
-    box-shadow: 0 6px 6px #F03C2E;
-    background: #F03C2E;
-  }
-
-  .langs-tech a[href="#py"]:hover {
-    box-shadow: 0 3px 3px #346E9E, 0 6px 6px #FFD242;
-    background: #346E9E;
-  }
-
-  .langs-tech a[href="#firebase"]:hover {
-    box-shadow: 0 2px 2px #FFA513, 0 4px 4px #F4830F, 0 6px 6px #FFCB2E;
-    background: #FFA513;
-  }
-
-  p a {
-    text-decoration: none;
-    color: var(--accent2);
-    font-weight: 600;
-    transition: .3s;
-  }
-
-  p a:hover {
-    color: var(--accent2_hover);
   }
 
   section:not(.langs-section) {
@@ -748,31 +433,11 @@ body {
     letter-spacing: 1px;
   }
 
-  .colored-text {
-    background-clip: text;
-    background: -webkit-linear-gradient(40deg, var(--accent), var(--accent2));
-    -webkit-background-clip: text;
-    max-width: fit-content;
-    -webkit-text-fill-color: transparent;
-    font-weight: 700;
-  }
-
   .contact-socials-wrp {
     display: flex;
     justify-content: center;
     flex-direction: column;
     gap: 30px;
-  }
-
-  .socials-element a {
-    color: rgba(255, 255, 255, 0.836);
-    transition: .3s;
-    font-size: 13pt;
-    text-decoration: none;
-  }
-
-  .socials-element a:hover {
-    color: white;
   }
 
   .socel-wrp {
@@ -792,11 +457,6 @@ body {
     -ms-user-select: none;
   }
 
-  a.colored-text:hover {
-    background-position-x: 124px;
-    filter: contrast(10);
-  }
-
   .langs-section {
     width: 100%;
     padding-block: 30px;
@@ -810,41 +470,12 @@ body {
     padding-inline: 5px;
   }
 
-  .langs-section:last-child {
-    border-bottom: none;
-  }
-
-  .langs-section img {
-    max-height: 30px;
-    width: auto;
-    user-select: none;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-
-  }
-
   .langs-section h3 {
     display: none;
   }
 
   .langs-section p {
     text-align: center;
-  }
-
-  .sarcasm {
-    text-decoration: line-through;
-    color: rgb(255, 0, 0);
-  }
-
-  .langs-icons {
-    display: flex;
-    gap: 10px;
-    min-width: 70px;
-    justify-content: center;
-    max-width: 70px;
   }
 
   footer {
@@ -859,162 +490,297 @@ body {
     text-align: center;
   }
 
-  .no-projects-wrp {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .no-projects {
-    text-align: center;
-  }
-
-  .no-projects * {
-    letter-spacing: 1px;
-  }
-
-  .no-projects h1 {
-    color: rgba(255, 126, 126, 0.634);
-    margin-bottom: 30px;
-    font-size: 26pt;
-  }
-
-  .no-projects p {
-    color: grey;
-    font-size: 14pt;
-  }
-
-  main.projects {
-    padding-top: 120px;
-    min-height: calc(100vh - 145px);
-  }
-
-  main.projects>h1 {
-    text-align: center;
-    margin-bottom: 15px;
-  }
-
-  .projects-wrp {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .project-side img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 18px;
-  }
-
-  .project-side {
-    width: 47%;
-  }
-
-  .project-side:has(h3) {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    gap: 20px;
-  }
-
-  .project:nth-child(even) {
-    flex-direction: row-reverse;
-  }
-
-  .project-side:has(img) {
-    display: grid;
-    align-items: center;
-  }
-
-  .project-side .tags {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .project-side a {
-    display: grid;
-    place-items: center;
-  }
-
-  .tag {
-    padding: 4px 12px;
-    margin: 6px;
-    border-radius: 4px;
-    font-size: 10pt;
-    font-style: italic;
-    background: #242938;
-    font-weight: 600;
-  }
-
-  .js-tag {
-    color: #F0DB4F;
-  }
-
-  .svelte-tag {
-    color: #FF3E00;
-  }
-
-  .firebase-tag {
-    color: #FFA513;
-  }
-
-  .html-tag {
-    color: #E14E1D;
-  }
-
-  .ts-tag {
-    color: #007ACC;
-  }
-
-  .py-tag {
-    color: #FFD242;
-  }
-
-  .react-tag {
-    color: #00D8FF;
+  .project-side:nth-child(2) {
+    margin-top: 30px;
   }
 
   .project {
-    width: 900px;
+    width: 95%;
     box-sizing: border-box;
-    padding: 30px;
+    padding: 10px;
     border: 1px rgba(255, 255, 255, 0.14) solid;
     border-radius: 18px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     margin-block: 30px;
   }
+}
 
-  .tags-wrp>p {
-    font-size: 11pt;
-    color: rgba(255, 255, 255, 0.671);
-    margin-bottom: 2px;
-  }
+.logo-text:hover {
+  background-position-x: 156px;
+  filter: contrast(10);
+}
 
-  .no-demo {
-    color: rgba(255, 105, 105, 0.856);
-    display: grid;
-    align-items: center;
-  }
+.langs-tech a {
+  display: grid;
+  margin: 10px;
+  transition: .3s;
+  border-radius: 12px;
+}
 
-  .project-links {
-    display: flex;
-    gap: 20px;
-  }
+.langs-tech img {
+  user-select: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
 
-  .project-links a {
-    transition: .3s;
-    display: grid;
-  }
+.langs-tech a:hover {
+  transform: translateY(-6px) scale(1.05);
+}
 
-  .project-links a:hover img {
-    filter: invert(0%);
-  }
+.langs-tech a[href="#html-css"]:hover {
+  box-shadow: 0 6px 6px #E14E1D;
+  background: #E14E1D;
+}
 
-  .project-links a img {
-    max-height: 30px;
-    width: auto;
-    filter: invert(10%);
-  }
+.langs-tech a[href="#html-css"]:nth-child(2):hover {
+  box-shadow: 0 6px 6px #0277BD;
+  background: #0277BD;
+}
+
+.langs-tech a[href="#js"]:hover {
+  box-shadow: 0 6px 6px #F0DB4F;
+  background: #F0DB4F;
+}
+
+.langs-tech a[href="#ts"]:hover {
+  box-shadow: 0 6px 6px #007ACC;
+  background: #007ACC;
+}
+
+.langs-tech a[href="#react"]:hover {
+  box-shadow: 0 6px 6px #00D8FF;
+  background: #00D8FF;
+}
+
+.langs-tech a[href="#svelte"]:hover {
+  box-shadow: 0 6px 6px #FF3E00;
+  background: #FF3E00;
+}
+
+.langs-tech a[href="#git"]:hover {
+  box-shadow: 0 6px 6px #F03C2E;
+  background: #F03C2E;
+}
+
+.langs-tech a[href="#py"]:hover {
+  box-shadow: 0 3px 3px #346E9E, 0 6px 6px #FFD242;
+  background: #346E9E;
+}
+
+.langs-tech a[href="#firebase"]:hover {
+  box-shadow: 0 2px 2px #FFA513, 0 4px 4px #F4830F, 0 6px 6px #FFCB2E;
+  background: #FFA513;
+}
+
+p a {
+  text-decoration: none;
+  color: var(--accent2);
+  font-weight: 600;
+  transition: .3s;
+}
+
+p a:hover {
+  color: var(--accent2_hover);
+}
+
+.colored-text {
+  background-clip: text;
+  background: -webkit-linear-gradient(40deg, var(--accent), var(--accent2));
+  -webkit-background-clip: text;
+  max-width: fit-content;
+  -webkit-text-fill-color: transparent;
+  font-weight: 700;
+}
+
+.socials-element a {
+  color: rgba(255, 255, 255, 0.836);
+  transition: .3s;
+  font-size: 13pt;
+  text-decoration: none;
+}
+
+.socials-element a:hover {
+  color: white;
+}
+
+a.colored-text:hover {
+  background-position-x: 124px;
+  filter: contrast(10);
+}
+
+.langs-section:last-child {
+  border-bottom: none;
+}
+
+.langs-section img {
+  max-height: 30px;
+  width: auto;
+  user-select: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.sarcasm {
+  text-decoration: line-through;
+  color: rgb(255, 0, 0);
+}
+
+.langs-icons {
+  display: flex;
+  gap: 10px;
+  min-width: 70px;
+  justify-content: center;
+  max-width: 70px;
+}
+
+.no-projects-wrp {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.no-projects {
+  text-align: center;
+}
+
+.no-projects * {
+  letter-spacing: 1px;
+}
+
+.no-projects h1 {
+  color: rgba(255, 126, 126, 0.634);
+  margin-bottom: 30px;
+  font-size: 26pt;
+}
+
+.no-projects p {
+  color: grey;
+  font-size: 14pt;
+}
+
+main.projects {
+  padding-top: 120px;
+  min-height: calc(100vh - 145px);
+}
+
+main.projects>h1 {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.projects-wrp {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-side img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 18px;
+}
+
+.project-side:has(h3) {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 20px;
+}
+
+.project:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+.project-side:has(img) {
+  display: grid;
+  align-items: center;
+}
+
+.project-side .tags {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.project-side a {
+  display: grid;
+  place-items: center;
+}
+
+.tag {
+  padding: 4px 12px;
+  margin: 6px;
+  border-radius: 4px;
+  font-size: 10pt;
+  font-style: italic;
+  background: #242938;
+  font-weight: 600;
+}
+
+.js-tag {
+  color: #F0DB4F;
+}
+
+.svelte-tag {
+  color: #FF3E00;
+}
+
+.firebase-tag {
+  color: #FFA513;
+}
+
+.html-tag {
+  color: #E14E1D;
+}
+
+.ts-tag {
+  color: #007ACC;
+}
+
+.py-tag {
+  color: #FFD242;
+}
+
+.react-tag {
+  color: #00D8FF;
+}
+
+.tags-wrp>p {
+  font-size: 11pt;
+  color: rgba(255, 255, 255, 0.671);
+  margin-bottom: 2px;
+}
+
+.no-demo {
+  color: rgba(255, 105, 105, 0.856);
+  display: grid;
+  align-items: center;
+}
+
+.project-links {
+  display: flex;
+  gap: 20px;
+}
+
+.project-links a {
+  transition: .3s;
+  display: grid;
+}
+
+.project-links a:hover img {
+  filter: invert(0%);
+}
+
+.project-links a img {
+  max-height: 30px;
+  width: auto;
+  filter: invert(10%);
 }
