--- a/src/App.css
+++ b/src/App.css
@@ -190,9 +190,9 @@ body {
   }
 
   .langs-section {
-    margin-left: 30px;
     padding-block: 30px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: 30px;
     border-bottom: 1px rgba(255, 255, 255, 0.154) solid;
@@ -202,6 +202,11 @@ body {
     display: grid;
     max-width: 58px;
     word-wrap: break-word;
+  }
+
+  .langs-section p {
+    min-width: 400px;
+    max-width: 400px;
   }
 
   footer {
