Adde a download icon for the projects page and polished some css in there

--- a/src/App.css
+++ b/src/App.css
@@ -775,6 +775,9 @@ main.projects>h1 {
 .project-side img {
   max-width: 100%;
   height: auto;
+}
+
+.project-side .rounded {
   border-radius: 18px;
 }
 
