--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-#root:has(.error)>nav,
-#root:has(.error)>footer,
-#root:has(.error)>#mobile {
-  display: none;
-}
-
 :root {
   --mainBG: rgb(20, 20, 26);
   --mainBGNum: 20, 20, 26;
@@ -47,6 +41,13 @@ body {
 }
 
 @media (min-width: 1000px) {
+  .langs-tech a {
+    display: grid;
+    margin: 10px;
+    transition: .3s;
+    border-radius: 12px;
+  }
+
   .socials-element a {
     color: rgba(255, 255, 255, 0.836);
     transition: .3s;
@@ -155,7 +156,7 @@ body {
     margin-left: 16px;
   }
 
-  header:not(.error) {
+  header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -192,7 +193,7 @@ body {
     height: fit-content;
     font-size: 1rem;
     color: #ffffffd4;
-    text-align: right;
+    text-align: center;
     width: calc(100% - 10px);
     font-weight: 700;
     margin-bottom: -100%;
@@ -202,6 +203,7 @@ body {
     max-width: 204px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
   }
 
   section:not(.langs-section) {
@@ -436,7 +438,7 @@ body {
     letter-spacing: -1px;
     user-select: none;
     cursor: pointer;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     background-clip: text;
     text-decoration: none;
     transition: .3s;
@@ -449,19 +451,22 @@ body {
     align-items: center;
   }
 
-  header:not(.error) {
+  header {
     display: flex;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    padding-top: 75px;
     height: 100vh;
     flex-direction: column;
   }
 
+  header:not(header:has(.login-form)) {
+    padding-top: 75px;
+  }
+
   header h1 {
     font-size: 2.5rem;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
 
   header *:not(header::before, header::after) {
@@ -497,9 +502,10 @@ body {
   }
 
   .langs-tech {
-    margin-top: 20px;
+    margin-top: 15px;
     max-width: 204px;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
   }
 
@@ -607,17 +613,17 @@ body {
     justify-content: space-between;
     margin-block: 30px;
   }
+
+  .langs-tech a {
+    display: grid;
+    margin: 7px 10px;
+    transition: .3s;
+    border-radius: 12px;
+  }
 }
 
 .logo-text:hover {
   filter: contrast(20);
-}
-
-.langs-tech a {
-  display: grid;
-  margin: 10px;
-  transition: .3s;
-  border-radius: 12px;
 }
 
 .langs-tech img {
@@ -676,6 +682,11 @@ body {
 .langs-tech a[href="#firebase"]:hover {
   box-shadow: 0 2px 2px #FFA513, 0 4px 4px #F4830F, 0 6px 6px #FFCB2E;
   background: #FFA513;
+}
+
+.langs-tech a[href="#supabase"]:hover {
+  box-shadow: 0 6px 6px #249361;
+  background: #249361;
 }
 
 p a {
@@ -845,6 +856,10 @@ main.projects>h1 {
   color: #00D8FF;
 }
 
+.supabase-tag {
+  color: #249361;
+}
+
 .tags-wrp>p {
   font-size: 0.9rem;
   color: rgba(255, 255, 255, 0.671);
@@ -946,6 +961,10 @@ main.projects>h1 {
   background: radial-gradient(#FFA513, var(--mainBG));
 }
 
+.langs-sec-border#supabase {
+  background: radial-gradient(#249361, var(--mainBG));
+}
+
 main>* {
   z-index: 5;
 }
@@ -1008,6 +1027,7 @@ header.error {
   height: 109px;
   transform: translateY(-10px);
   margin-inline: auto;
+  animation: scale 60s linear infinite;
 }
 
 .background-element:nth-child(2) {
@@ -1016,6 +1036,13 @@ header.error {
   height: 60px;
   transform: translateY(10px);
   animation: rotate 30s linear infinite;
+}
+
+@keyframes scale {
+  50% {
+    transform: scale(1.3);
+    opacity: 0.7;
+  }
 }
 
 @keyframes rotate {
@@ -1042,4 +1069,72 @@ header.error {
 .project .date {
   color: grey;
   font-size: 0.9rem;
+}
+
+.login-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.login-form {
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: 1px rgba(255, 255, 255, 0.14) solid;
+  border-radius: 18px;
+  gap: 30px;
+  max-width: 70%;
+}
+
+.login-form input {
+  border-radius: 14px;
+  background: transparent;
+  backdrop-filter: blur(20px);
+  padding: 10px 20px;
+  outline: none;
+  max-width: 90%;
+}
+
+.login-form input,
+.login-form button {
+  color: white;
+  font-size: 1rem;
+  border: 1px rgba(255, 255, 255, 0.14) solid;
+  transition: .3s;
+}
+
+.form-btn-border {
+  background: linear-gradient(-270deg, rgb(60 60 60) 5%, rgb(20 20 20));
+  border-radius: 14px;
+  max-width: fit-content;
+  transition: .3s;
+}
+
+.login-form button {
+  background: rgb(26, 26, 26);
+  border-radius: inherit;
+  padding: 10px 20px;
+  margin: 2px;
+  border: none;
+  cursor: pointer;
+}
+
+.login-form .form-btn-border:hover {
+  background-position-x: 53px;
+}
+
+.login-form input:hover {
+  border-color: rgba(255, 255, 255, 0.699);
+}
+
+.login-form input:focus {
+  border-color: white;
+}
+
+.login-form input:focus::placeholder {
+  color: white;
 }
